--- a/docroot/themes/custom/drupal-brasil/templates/page.html.twig
+++ b/docroot/themes/custom/drupal-brasil/templates/page.html.twig
@@ -116,7 +116,7 @@
         <div id="main" class="{{ container }}">
           {{ page.breadcrumb }}
           <div class="row row-offcanvas row-offcanvas-left clearfix">
-              <main{{ content_attributes }}>
+              <main{{ content_attributes.addClass('px-0') }}>
                 <section class="section">
                   <a id="main-content" tabindex="-1"></a>
                   {{ page.content }}
