--- a/docroot/themes/custom/bartik_subtheme/css/style.css
+++ b/docroot/themes/custom/bartik_subtheme/css/style.css
@@ -3,21 +3,37 @@
     border-bottom: none;
 }
 
+/* Featured Top */
+.featured-top .page-title {
+    color: #fff;
+}
+
+
 /* Blog */
 .path-blog .page-title {
     text-align: center;
 }
 
 /* Node */
+.node header {
+    margin-bottom: 1em;
+}
+
 .node .username {
     font-size: 2em;
+}
+
+.node .field {
+    margin: 1em 0;
 }
 
 /* Responsive Youtube and Vimeo embed */
 .video-responsive-container {
     position: relative;
     padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
+    padding-top: 30px; 
+    height: 0; 
+    overflow: hidden;
 }
      
 .video-responsive-container iframe {
@@ -26,4 +42,38 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media all and (min-width: 461px) {
+    .region-primary-menu .menu {
+        display: flex;
+    }
+    .region-primary-menu .menu a {
+        background: transparent;
+        color: #fff;
+        text-shadow: none;
+        font-weight: bold;
+    }
+    .region-primary-menu .menu a:hover,
+    .region-primary-menu .menu a:focus {
+        background: transparent;
+    }
+    .region-primary-menu .menu a:active {
+        background: transparent;
+    }
+    .region-primary-menu .menu-item a.is-active {
+        background: transparent;
+        color: #022a50;
+    }
+}
+
+@media all and (min-width: 851px) {
+    .main-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .region-primary-menu .menu a {
+        font-size: 1.2em;
+    }
 }
