--- a/docroot/themes/custom/bartik_subtheme/css/style.css
+++ b/docroot/themes/custom/bartik_subtheme/css/style.css
@@ -27,6 +27,10 @@
     font-size: 2em;
 }
 
+.media.media--view-mode-teaser {
+    margin: 0 1rem;
+}
+
 /* Responsive Youtube and Vimeo embed */
 .video-responsive-container {
     position: relative;
@@ -50,7 +54,7 @@
 }
 
 .card--description {
-    padding: 10px;
+    padding: 0 10px;
 }
 
 /* Block Class */
