--- a/docroot/themes/custom/bartik_subtheme/templates/node--article--teaser.html.twig
+++ b/docroot/themes/custom/bartik_subtheme/templates/node--article--teaser.html.twig
@@ -82,7 +82,7 @@
   <div class="card--image">
     {{ content.field_image }}
   </div>
-  <div class="card--description">
+  <div class="card--description node__content">
     {{ title_prefix }}
       {% if label and not page %}
       <h3{{ title_attributes.addClass('node__title') }}>
