Adjust block title and add field company

--- a/docroot/themes/custom/bartik_subtheme/css/overrides.css
+++ b/docroot/themes/custom/bartik_subtheme/css/overrides.css
@@ -37,7 +37,7 @@ h1 {
 }
 
 /* featured-top.css */
-.page-node-type-article .featured-top {
+.featured-top {
     background-color: #022a50;
     padding-bottom: 20px;
 }
