--- a/docroot/themes/custom/bartik_subtheme/css/overrides.css
+++ b/docroot/themes/custom/bartik_subtheme/css/overrides.css
@@ -56,6 +56,7 @@ h1 {
     height: 100%;
     position: absolute;
     background-position: top center;
+    background-size: cover;
     filter: brightness(0.2);
 }
 
