--- a/docroot/themes/custom/bartik_subtheme/css/style.css
+++ b/docroot/themes/custom/bartik_subtheme/css/style.css
@@ -58,7 +58,7 @@
 }
 
 /* Block Class */
-.block-title-1 h2 {
+.block h2 {
     text-transform: uppercase;
     font-size: 1.7rem;
 }
@@ -66,6 +66,8 @@
 .text-center h2 {
     text-align: center;
 }
+
+
 
 @media all and (min-width: 461px) {
     .region-primary-menu .menu {
