--- a/docroot/themes/custom/bartik_subtheme/css/overrides.css
+++ b/docroot/themes/custom/bartik_subtheme/css/overrides.css
@@ -191,9 +191,11 @@ a:focus,
 
 .field--name-field-tags ul.links a {
     border: 2px solid #0071b3;
-    padding: 2px 10px;
+    padding: 0 10px;
     border-radius: 15px;
     font-size: 1.4em;
+    display: inline-block;
+    margin-bottom: 10px;
 }
 
 .field--name-field-tags ul.links a:hover {
