--- a/docroot/themes/custom/bartik_subtheme/css/overrides.css
+++ b/docroot/themes/custom/bartik_subtheme/css/overrides.css
@@ -203,6 +203,11 @@ a:focus,
     color: #ffffff;
 }
 
+.a2a_svg, 
+.a2a_count {
+    margin: auto 0.5rem !important;
+}
+
 @media all and (min-width: 560px) {
     .grid .view-content {
         display: grid;
